--- a/coplime_client_web/web/resources/css/personalizados.css
+++ b/coplime_client_web/web/resources/css/personalizados.css
@@ -25,3 +25,24 @@ root {
     text-align: center;
     margin-top: -5px;
 }
+
+.btn-menu-superior {
+    top: 6px;
+    left: 5px;
+    position: absolute;
+    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.3);
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
+    text-align: center;
+    cursor: pointer;
+    background-clip: padding-box;
+    border-radius: 1em 1em 1em 1em;
+    text-decoration: none;
+    border: 1px solid rgb(17, 17, 17);
+    background: linear-gradient(rgb(68, 68, 68), rgb(45, 45, 45)) repeat scroll 0% 0% rgb(51, 51, 51);
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 1px 0px rgb(17, 17, 17);
+    
+}
