--- a/coplime_client_web/web/resources/css/css/bootstrap.css
+++ b/coplime_client_web/web/resources/css/css/bootstrap.css
@@ -3454,7 +3454,7 @@ input[type="submit"].btn.btn-mini {
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
   background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
   background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
-  background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
+  background-image: linear-gradient(rgb(60, 60, 60), rgb(17, 17, 17)) repeat scroll 0% 0% rgb(17, 17, 17);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
   border: 1px solid #d4d4d4;
