--- a/coplime_client_web/web/resources/css/css/bootstrap.css
+++ b/coplime_client_web/web/resources/css/css/bootstrap.css
@@ -60,6 +60,7 @@ html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  color: #000;
 }
 a:focus {
   outline: thin dotted #333;
